--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "cdv-2023",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "d3": "^7.8.5"
-  },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
+    "d3": "^7.8.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
