--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "d3": "^7.8.5",
+    "sass": "^1.63.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
