--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cdv-2023",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "temp/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
